Refactoring to functional interfaces
Fixes #47

reformatting